kotlin: fix openapi parsing on kotlin 2.0